--- a/Week2/mystyle.Css
+++ b/Week2/mystyle.Css
@@ -1,23 +1,26 @@
 /* 
 Comment
  */
- /* h1 {
-    font-family: 'TH SarabunPSK';
+
+ h1{
+    font-family:  'TH SarabunPSK';
     font-size: 35pt;
- } */
+
+ }
  h2 {
     font-family: 'TH SarabunPSK';
     font-size: 30pt;
  }
- /* h1 , h2
- {text-shadow: 5px 5px 5px #795548;} */
- /* body {
-    background-image: url('4172161.jpg');
-    background-size: cover; 
+
+h1,h2{
+    text-shadow: 5px 5px 5px #795548;
+}
+body{
+    background-image: url(4172161.jpg);
+    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed; 
-    
-} */
+    background-attachment: fixed;
+}
 p {
     background-image: url('4172161.jpg');
 }
@@ -26,10 +29,15 @@ p {
     height: 400px;
     color: rgb(255, 255, 255);
     background-color: rgb(88, 90, 88);
+    background-image: url(cat1.jpg);
     text-align:  center;
     border:  5px dashed rgb(0, 255, 0);
     padding-top:  50px;
     margin:  50px;
+    transition: 1s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .box:hover{
     background-color: rgb(118, 11, 28);
@@ -39,4 +47,7 @@ a{
 }
 a:link{
     color: #FF0000;
+}
+.box:hover{
+    transform: scale(1.2);
 }
