--- a/Week3/mystylephp.Css
+++ b/Week3/mystylephp.Css
@@ -5,7 +5,7 @@ h1{
 
  }
  body{
-    background-image: url(Pixelart.gif);
+    background-image: url(Merry.gif);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
